--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@
   font-weight: 400;
   font-family: "Gilroy";
 
-  src: local("Gilroy"),
-  url("/fonts/gilroylight.woff2") format("woff2");
+  src: local("Gilroy Light"),
+  local("Gilroy-Light"),
+  url("../fonts/gilroylight.woff2") format("woff2");
 }
 
 @font-face {
@@ -14,10 +15,11 @@
 
   src: local("Gilroy Extra Bold"),
   local("Gilroy-ExtraBold"),
-  url("/fonts/gilroyextrabold.woff2") format("woff2");
+  url("../fonts/gilroyextrabold.woff2") format("woff2");
 }
 
 body {
+  min-width: 1440px;
   margin: 0;
   padding: 0;
 
@@ -27,6 +29,12 @@ body {
   color: rgb(0, 0, 0);
 
   background-color: rgb(255, 255, 255);
+}
+
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0 0;
 }
 
 a {
@@ -102,8 +110,56 @@ a {
   opacity: 0.3;
 }
 
-header {
+.main-header {
+  margin-top: 40px;
+  padding-bottom: 1px;
+
   background-color: rgba(240, 197, 46, 0.5);
+}
+
+.main-header-logo img {
+  margin-top: -19px;
+  margin-bottom: 22px;
+}
+
+.user-navigation {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.main-navigation {
+  padding-right: 61px;
+  padding-left: 60px;
+}
+
+.main-navigation-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.site-navigation {
+  display: flex;
+  margin: 0;
+  margin-bottom: 167px;
+  padding: 0;
+}
+
+.site-navigation li:first-child {
+  margin-right: auto;
+}
+
+.catalog-page .site-navigation {
+  margin-bottom: 50px;
+}
+
+.catalog-page .main-header {
+  margin-bottom: 44px;
+}
+
+.search {
+  margin-bottom: 35px;
+  margin-left: 39px;
 }
 
 .search,
@@ -271,7 +327,25 @@ header {
   color: rgb(0, 0, 0);
 }
 
+.info-columns {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 93px;
+}
+
+.about-us {
+  width: 500px;
+}
+
+.contacts {
+  width: 600px;
+}
+
 .main-footer {
+  width: 100%;
+  padding-top: 1px;
+  padding-bottom: 1px;
+
   color: rgb(255, 255, 255);
 
   background-color: rgb(70, 70, 70);
@@ -282,6 +356,56 @@ header {
   font-size: 15px;
   line-height: 30px;
   font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 65px;
+  margin-bottom: 15px;
+}
+
+.footer-middle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.adress {
+  order: -1;
+}
+
+.rectangle {
+  width: 80px;
+  height: 7px;
+
+  background-color: rgb(255, 198, 0);
+}
+
+.footer-social {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 67px;
+}
+
+.site-footer-navigation {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.user-footer-navigation {
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .main-footer ul {
@@ -379,6 +503,9 @@ main h1 {
 }
 
 .breadcrumbs {
+  display: flex;
+  padding-left: 61px;
+
   list-style: none;
   font-weight: 300;
   font-size: 14px;
@@ -398,6 +525,31 @@ main h1 {
 
 .breadcrumbs a:active {
   color: rgba(0, 0, 0, 0.1);
+}
+
+.catalog-columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  width: 780px;
+  margin: 0;
+  padding: 0;
+}
+
+.products li {
+  margin-right: 40px;
+}
+
+.products li:nth-child(2n) {
+  margin-right: 0;
+}
+
+.filters {
+  width: 330px;
 }
 
 .filters h2,
@@ -490,4 +642,10 @@ input[type="radio"]:disabled {
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   letter-spacing: 0.91px;
+}
+
+.catalog-page h1 {
+  margin-top: 0;
+  margin-bottom: 29px;
+  margin-left: 61px;
 }
