--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,17 @@ a {
 }
 
 .site-navigation {
+  position: relative;
+
   display: flex;
   justify-content: space-between;
   margin: 0;
   margin-bottom: 159px;
   padding: 0;
+}
+
+.site-navigation > li:hover .catalog-menu {
+  display: flex;
 }
 
 .site-navigation-wrapper {
@@ -331,13 +337,37 @@ a {
   outline: none;
 }
 
-.site-navigation a {
+.site-navigation > li > a,
+.site-navigation-wrapper a {
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
   text-transform: uppercase;
   letter-spacing: 3.6px;
+}
+
+.catalog-menu {
+  position: absolute;
+  top: 21px;
+
+  display: none;
+  width: 100%;
+  height: 139px;
+  padding-top: 30px;
+}
+
+.catalog-menu ul {
+  width: 200px;
+  padding: 0;
+}
+
+.catalog-menu li {
+  margin-bottom: 6px;
+}
+
+.catalog-menu ul:first-child {
+  margin-right: 40px;
 }
 
 .search-button {
