--- a/css/style.css
+++ b/css/style.css
@@ -127,12 +127,26 @@ a {
 }
 
 .main-navigation {
+  position: relative;
+
   padding-top: 1px;
   padding-right: 61px;
   padding-bottom: 1px;
   padding-left: 60px;
 
   background-color: rgba(240, 197, 46, 0.5);
+}
+
+.main-navigation::after {
+  content: "";
+  position: absolute;
+  right: 460px;
+  bottom: 67px;
+
+  width: 100px;
+  height: 7px;
+
+  background-color: rgb(255, 255, 255);
 }
 
 .main-navigation ul {
@@ -349,12 +363,15 @@ a {
 
 .catalog-menu {
   position: absolute;
-  top: 21px;
+  top: 28px;
+  z-index: 2;
 
   display: none;
   width: 100%;
   height: 139px;
-  padding-top: 30px;
+  padding-top: 23px;
+
+  background-color: rgb(248, 226, 150);
 }
 
 .catalog-menu ul {
