--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,15 @@ a {
 .button {
   position: relative;
 
+  display: inline-block;
+
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
-  letter-spacing: 2.15px;
+  letter-spacing: 3.66px;
 
   background-color: inherit;
   border: none;
@@ -73,13 +75,12 @@ a {
 
 .button:before {
   content: "";
-  content: "";
   position: absolute;
-  top: 7px;
-  left: -44px;
+  top: 8px;
+  left: auto;
   z-index: -1;
 
-  width: 220px;
+  width: 100%;
   height: 8px;
 
   background-color: rgb(240, 197, 46);
@@ -486,24 +487,6 @@ a {
   letter-spacing: 0.21px;
 }
 
-.about-us,
-.contacts {
-  font-weight: 400;
-  font-size: 47px;
-  line-height: 48px;
-  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
-  letter-spacing: 0.21px;
-}
-
-.about-us p,
-.contacts p,
-.services-description p {
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 30px;
-  color: rgb(70, 70, 70);
-}
-
 .companies-list img {
   filter: grayscale(1) opacity(0.2);
 }
@@ -512,20 +495,39 @@ a {
   filter: none;
 }
 
-.about-us .button::before,
-.contacts .button::before {
-  left: -23px;
 
-  width: 260 px;
-}
 
 .deliveries {
+  margin: 0;
+  margin-top: 66px;
+  margin-bottom: 59px;
+  padding-left: 35px;
+
   list-style: none;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 40px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
+}
+
+.deliveries li {
+  position: relative;
+}
+
+.deliveries li::before {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: -35px;
+
+  width: 4px;
+  height: 4px;
+
+  border: 2px solid rgb(229, 229, 229);
+  border-radius: 50%;
 }
 
 .deliveries a {
-  font-size: 16px;
-  line-height: 40px;
   color: rgb(0, 0, 0);
 }
 
@@ -535,12 +537,71 @@ a {
   margin-bottom: 93px;
 }
 
+.info-columns p {
+  margin: 0;
+}
+
+.info-columns h2 {
+  margin: 0;
+  margin-bottom: 43px;
+
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
+  letter-spacing: 0.71px;
+}
+
 .about-us {
-  width: 500px;
+  width: 465px;
+  padding-top: 55px;
+}
+
+.about-us p {
+  margin-bottom: 30px;
+}
+
+.about-us h2 {
+  margin-left: -2px;
+}
+
+.about-us p:nth-of-type(1) {
+  margin-top: 0;
+
+  letter-spacing: 0.11px;
+}
+
+.about-us p:nth-of-type(2) {
+  letter-spacing: -0.19px;
+}
+
+.about-us .button {
+  margin-left: -1px;
+}
+
+.about-us .button-text {
+  padding: 0 21px;
+}
+
+.about-us-title {
+  position: relative;
+}
+
+.about-us-title::before {
+  content: "";
+  position: absolute;
+  top: -52px;
+  left: 2px;
+
+  width: 80px;
+  height: 7px;
+
+  background-color: rgb(0, 0, 0);
 }
 
 .contacts {
-  width: 600px;
+  width: 563px;
+  padding-top: 55px;
 }
 
 .main-footer {
