--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .visually-hidden {
   position: absolute;
 
@@ -602,6 +607,32 @@ a {
 .contacts {
   width: 563px;
   padding-top: 55px;
+}
+
+.contacts-title {
+  position: relative;
+}
+
+.contacts-title::before {
+  content: "";
+  position: absolute;
+  top: -52px;
+  left: 3px;
+
+  width: 80px;
+  height: 7px;
+
+  background-color: rgb(0, 0, 0);
+}
+
+.contacts p {
+  margin-bottom: 39px;
+
+  letter-spacing: 0.11px;
+}
+
+.contacts img {
+  margin-left: 3px;
 }
 
 .main-footer {
