--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 }
 
 body {
+  min-width: 1440px;
   margin: 0;
   padding: 0;
   padding-top: 40px;
@@ -47,7 +48,9 @@ img {
   height: auto;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
 
   width: 1px;
@@ -56,9 +59,12 @@ img {
   padding: 0;
   overflow: hidden;
 
+  white-space: nowrap;
+
   border: 0;
 
   clip: rect(0 0 0 0);
+  clip-path: inset(100%);
 }
 
 .button {
@@ -539,7 +545,7 @@ img {
 .info-columns {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 93px;
+  margin-bottom: 86px;
 }
 
 .info-columns p {
@@ -580,19 +586,18 @@ img {
   letter-spacing: -0.19px;
 }
 
-.about-us .button {
-  margin-left: -1px;
-}
-
 .about-us .button-text {
-  padding: 0 21px;
+  margin-left: 2px;
+  padding: 0 20px;
 }
 
-.about-us-title {
+.about-us-title,
+.contacts-title {
   position: relative;
 }
 
-.about-us-title::before {
+.about-us-title::before,
+.contacts-title::before {
   content: "";
   position: absolute;
   top: -52px;
@@ -609,20 +614,17 @@ img {
   padding-top: 55px;
 }
 
-.contacts-title {
-  position: relative;
+.contacts .button {
+  margin-left: 3px;
+}
+
+.contacts .button-text {
+  margin-left: 3px;
+  padding: 0 37px;
 }
 
 .contacts-title::before {
-  content: "";
-  position: absolute;
-  top: -52px;
   left: 3px;
-
-  width: 80px;
-  height: 7px;
-
-  background-color: rgb(0, 0, 0);
 }
 
 .contacts p {
@@ -632,17 +634,24 @@ img {
 }
 
 .contacts img {
+  margin-bottom: 26px;
   margin-left: 3px;
 }
 
 .main-footer {
   width: 100%;
-  padding-top: 1px;
+  padding-top: 65px;
   padding-bottom: 1px;
 
   color: rgb(255, 255, 255);
 
   background-color: rgb(70, 70, 70);
+}
+
+.footer-logo {
+  display: block;
+  width: 163px;
+  height: 35px;
 }
 
 .footer-contacts {
@@ -653,53 +662,158 @@ img {
 
 .footer-top {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 65px;
   margin-bottom: 15px;
 }
 
 .footer-middle {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 26px;
 }
 
 .adress {
   order: -1;
+  width: 220px;
 }
 
-.rectangle {
+.phone {
+  width: 217px;
+
+  text-align: right;
+}
+
+.footer-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 140px;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-social a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  padding-top: 6px;
+}
+
+.social-fb {
+  background-image: url(../img/fb.svg);
+}
+
+.social-instagram {
+  background-image: url(../img/instagram.svg);
+}
+
+.social-twiter {
+  background-image: url(../img/twitter.svg);
+}
+
+.footer-copyright a {
+  display: inline-block;
+  width: 27px;
+  height: 35px;
+}
+
+.footer-copyright {
+  width: 80px;
+
+  text-align: right;
+}
+
+.footer-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 67px;
+}
+
+.footer-bottom::before {
+  content: "";
+
   width: 80px;
   height: 7px;
 
   background-color: rgb(255, 198, 0);
 }
 
-.footer-social {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 67px;
-}
-
 .site-footer-navigation {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 427px;
   margin: 0;
   padding: 0;
+
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
+  letter-spacing: 3.6px;
+}
+
+.site-footer-navigation li {
+  margin-top: 5px;
 }
 
 .user-footer-navigation {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  width: 480px;
   margin: 0;
   padding: 0;
 }
+
+.user-footer-navigation li {
+  margin-top: -2px;
+  margin-left: 33px;
+  padding-left: 30px;
+}
+
+.user-footer-navigation a {
+  position: relative;
+}
+
+.user-footer-navigation a::before {
+  content: "";
+  position: absolute;
+
+  width: 14px;
+  height: 14px;
+
+  background-color: rgb(70, 70, 70);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-login::before {
+  top: 3px;
+  left: -27px;
+
+  background-image: url(../img/user-footer.svg);
+}
+
+.footer-compare::before {
+  top: 4px;
+  left: -21px;
+
+  background-image: url(../img/compare-footer.svg);
+}
+
+.footer-cart::before {
+  top: 3px;
+  left: -23px;
+
+  background-image: url(../img/cart-footer.svg);
+}
+
 
 .main-footer ul {
   list-style: none;
